You can box-select only keyframes' handles in dopesheet, even though they are not visible/editable there. #47503

Closed
opened 2016-02-20 11:13:17 +01:00 by pistol ioan · 10 comments

Windows 10 64bit, gtx 970

blender-2.76 e29a5ba win64

Selecting from left to right give wrong selection + the last keyframes are not deleted.

According to Mr Pavel (tostrong4you) "Selecting from left to right
only selects what is inside the border" source: https://developer.blender.org/T47472?workflow=create

Open the blend file, and select as is shown in the image below.

Wrong selection + wrong deletion.jpg

selection bug.blend

**Windows 10 64bit, gtx 970** **blender-2.76 e29a5ba win64** Selecting from left to right give wrong selection + the last keyframes are not deleted. According to Mr Pavel (tostrong4you) "Selecting from left to right only selects what is inside the border" source: https://developer.blender.org/T47472?workflow=create Open the blend file, and select as is shown in the image below. ![Wrong selection + wrong deletion.jpg](https://archive.blender.org/developer/F284176/Wrong_selection___wrong_deletion.jpg) [selection bug.blend](https://archive.blender.org/developer/F284178/selection_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @istoltoto

Added subscriber: @istoltoto

Added subscribers: @JoshuaLeung, @mont29

Added subscribers: @JoshuaLeung, @mont29

Found the issue - those 'fake selected' keys in action editor are actually keys which have one handle selected (because it was inside select region), while center point of the key remains unselected - use FCurve window to visualize it.

@JoshuaLeung not sure whether this is a bug or desired behavior? Would think in action editor we'd only want to consider center points of keys for selection, since their handles are not visible?

Found the issue - those 'fake selected' keys in action editor are actually keys which have one handle selected (because it was inside select region), while center point of the key remains unselected - use FCurve window to visualize it. @JoshuaLeung not sure whether this is a bug or desired behavior? Would think in action editor we'd only want to consider center points of keys for selection, since their handles are not visible?
Bastien Montagne changed title from Wrong selection + wrong deletion to You can box-select only keyframes' handles in dopesheet, even though they are not visible/editable there. 2016-02-20 17:16:59 +01:00
Joshua Leung was assigned by Bastien Montagne 2016-02-20 17:16:59 +01:00
Author

I see now what you mean.

You are right, this can be a feature or a bad behavior.
But because in Blender is not a such option to activate or deactivate this kind of behavior. I think is a bug or a very confused feature.

I have no a big problem with extra selection of one more row. (which is confusing in my opinion)

But in this case, it needed to delete the visible selected keyframes.

Thanks,

I see now what you mean. You are right, this can be a feature or a bad behavior. But because in Blender is not a such option to activate or deactivate this kind of behavior. I think is a bug or a very confused feature. I have no a big problem with extra selection of one more row. (which is confusing in my opinion) But in this case, it needed to delete the visible selected keyframes. Thanks,
Author

Otherwise will lead to a hard time in Action Editor.
You can imagine, when you have tons of keyframes.
You have selected something, and BAM you have selected what you don't want.

Action Editor is good especially because is simplified, and i think this behavior is unnecessary.

Otherwise will lead to a hard time in Action Editor. You can imagine, when you have tons of keyframes. You have selected something, and BAM you have selected what you don't want. Action Editor is good especially because is simplified, and i think this behavior is unnecessary.
Author

I can make a pool and ask users opinion if you want :D
But i think you can imagine, this is not right.

I can make a pool and ask users opinion if you want :D But i think you can imagine, this is not right.
Author

I think the idea of Mr Pavel is great "Selecting from left to right
only selects what is inside the border
Selecting from right to left will select everything plus one level"

https://developer.blender.org/T47472?workflow=create

And you have have both.

The extra selection when selecting from right to left

And no extra selection when selecting from left to right.

I think this can solve all the problems.

I think the idea of Mr Pavel is great "Selecting from left to right only selects what is inside the border Selecting from right to left will select everything plus one level" https://developer.blender.org/T47472?workflow=create And you have have both. The extra selection when selecting from right to left And no extra selection when selecting from left to right. I think this can solve all the problems.

This issue was referenced by 1db29781db

This issue was referenced by 1db29781dbb9ad3f972f27a74a60aa244a6e86cd
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47503
No description provided.